k8s/nexus-artifactory-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  labels:
    artifactory: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      artifactory: nexus
  template:
    metadata:
      labels:
        artifactory: nexus
    spec:
      securityContext:
        runAsUser: 200
        runAsGroup: 2000
        fsGroup: 2000
      containers:
        - name: nexus
          image: sonatype/nexus3:3.15.2
          #command: ["sh", "-c", "chown -R 200:200 /nexus-data"]
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: hostvol-nexus
              mountPath: /nexus-data
      volumes:
        - name: hostvol-nexus
          persistentVolumeClaim:
            claimName: nexus-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-svc
  labels:
    app: nexus
spec:
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30181
      protocol: TCP
  selector:
    artifactory: nexus
  type: LoadBalancer
