k8s/store-service-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service-dep
  annotations:
    # Jaeger tracing sidecar
    sidecar.jaegertracing.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-service
  template:
    metadata:
      labels:
        app: store-service
    spec:
      restartPolicy: Always
      containers:
        - name: store-service
          image: giopeto/e-shop-store-service:V14
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: store-service-svc
spec:
  selector:
    app: store-service
  ports:
    - name: store-service-web
      protocol: "TCP"
      # Port accessible inside cluster
      port: 8081
      # Port to forward to inside the pod
      targetPort: 8081
      # Port accessible outside cluster
      nodePort: 30102
    # - name: store-service-debug
    #   protocol: "TCP"
    #   # Port accessible inside cluster
    #   port: 5005
    #   # Port to forward to inside the pod
    #   targetPort: 5005
    #   # Port accessible outside cluster
    #   nodePort: 30110
  type: LoadBalancer
