k8s/ui-client-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-client-dep
  namespace: k8s-eshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-client
  template:
    metadata:
      labels:
        app: ui-client
    spec:
      containers:
        - name: ui-client
          image: giopeto/e-shop-ui-client:V5
---

apiVersion: v1
kind: Service
metadata:
  name: ui-client-svc
  namespace: k8s-eshop
spec:
  selector:
    app: ui-client
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 80
      # Port accessible outside cluster
      nodePort: 30104
  type: LoadBalancer
