k8s/ui-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ui-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: giopeto/e-shop-ui:V1
---

apiVersion: v1
kind: Service
metadata:
  name: ui-svc
spec:
  selector:
    app: ui
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 80
      # Port accessible outside cluster
      nodePort: 30100
  type: LoadBalancer
