k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: e-shop-gateway-ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/add-base-url: 'true'
spec:
  
  rules:
    - host: k8s-eshop.io
      http:
        paths:
          - path: /client(/|$)(.*)
            backend:
              serviceName: ui-client-svc
              servicePort: 80
          - path: /admin(/|$)(.*)
            backend:
              serviceName: ui-admin-svc
              servicePort: 80
