k8s/ingress-nexus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: e-shop-gateway-ingress-nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nexus.k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: nexus-svc
              servicePort: 80
