k8s/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        #image: getintodevops/jenkins-withdocker:lts-docker18.06.0
        #image: jenkinsci/blueocean:1.19.0
        image: giopeto/jenkins-with-docker:V2
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
            - name: hostvol-jenkins
              mountPath: /var/jenkins_home
            - name: dockersock
              mountPath: "/var/run/docker.sock"
      volumes:
        - name: hostvol-jenkins
          persistentVolumeClaim:
            claimName: jenkins-pv-claim
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock 
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
      protocol: TCP
  selector:
    app: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp-svc
spec:
  type: ClusterIP
  ports:
    - port: 50000
      targetPort: 50000
  selector:
    app: jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: e-shop-gateway-ingress-jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: jenkins.k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-svc
              servicePort: 80
