k8s/zipkin-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      restartPolicy: Always
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-svc
spec:
  selector:
    app: zipkin
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 9411
      # Port accessible outside cluster
      nodePort: 30121
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: e-shop-gateway-ingress-zipkin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: zipkin.k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: zipkin-svc
              servicePort: 80
